minor text changes

--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -1,6 +1,6 @@
 <section class="container-apps-built">
   <div class="container text-center my-6">
-    <h3>Apps Built with the OST Wallet SDK</h3>
+    <h3>Apps Built with the Ost Wallet SDK</h3>
     <p class="mb-md-6 sub-heading">Live on Ethereum</p>
     <div class="d-block d-md-none mb-6 pb-6 pb-md-0 ">
       <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-logo.png" alt="Pepo Icon " class="img-fluid mb-3" width="168">
@@ -43,7 +43,7 @@
           Behind the scenes
         </p>
         <p class="col-12 d-none d-md-block order-md-5 px-0">
-          Pepo is powered by OST's industry-leading technology.
+          Pepo is powered by Ost's industry-leading technology.
         </p>
           <div class="col-12 d-none d-md-inline order-md-6 px-0">
             <a href="<%=GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="text-link ">Developer Resources</a>
