--- a/app/views/web/ost/index/_schedule_call.erb
+++ b/app/views/web/ost/index/_schedule_call.erb
@@ -4,7 +4,7 @@
       Ready to Start Building?
     </h4>
     <p class="desc text-left">
-      Schedule a call to understand how the OST Wallet SDK can be integrated into your application.
+      Schedule a call to understand how the Ost Wallet SDK can be integrated into your application.
     </p>
     <a href="https://calendly.com/ostdotcom" class="btn btn-primary mt-5 mt-md-1">Schedule a Call</a>
   </div>
