--- a/app/views/web/ost/index/_developer_first.erb
+++ b/app/views/web/ost/index/_developer_first.erb
@@ -9,7 +9,7 @@
       <div class="col-12 col-md-4 mr-auto order-2 order-md-1 align-self-start mr-lg-auto mt-4 mt-md-3 px-4 px-lg-0">
         <h5 class="header-title">Developers First</h5>
         <p class="mt-3">
-          OST Platform provides everything you need to test, integrate, and deploy your brand currency.
+          Ost Platform provides everything you need to test, integrate, and deploy your brand currency.
           Our APIs, SDKs, dashboards enable fast and painless integration into any app -- so you can focus on
           your business and leave the blockchain bits to us.
         </p>
