--- a/app/views/web/ost/index/_ost_wallet_sdk_features.erb
+++ b/app/views/web/ost/index/_ost_wallet_sdk_features.erb
@@ -1,6 +1,6 @@
 <section class="container-ost-wallet-unique-features">
   <div class="container py-6">
-    <h4 class="text-center py-4">Unique features enabled by the OST Wallet SDK</h4>
+    <h4 class="text-center py-4">Unique features enabled by the Ost Wallet SDK</h4>
     <div class="row">
 
       <div class="col-12 d-flex col-md-6 mb-4">
@@ -30,7 +30,7 @@
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
                 </switch>
               </svg>
-              <h6 class="header-text d-inline-block ml-3 mb-0">Non-custodial</h6>
+              <h6 class="header-text d-inline-block ml-3 mb-0">Self-custodial</h6>
             </div>
             <p class="my-2 desc">
               End users own their private keys and have full control over their funds. In case a device is lost,
@@ -69,7 +69,7 @@
               <h6 class="header-text d-inline-block ml-3 mb-0">Frictionless user experience</h6>
             </div>
             <p class="my-2 desc">
-              There's no need for external wallets and confusing pop-ups. OST Wallet makes it simple to onboard new and
+              There's no need for external wallets and confusing pop-ups. Ost Wallet makes it simple to onboard new and
               existing users and to incorporate token transfers into your existing application.
             </p>
           </div>
