--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -29,9 +29,9 @@
         </div>
 
         <p class="col-12 desc-p-two my-md-5 order-3 order-md-1 px-0">
-          Pepo demonstrates that crypto UX can be gorgeous. Pepo is so fast and easy to use you’ll rethink what’s
-          possible with crypto.<br> Pepo is the first crypto app approved by Apple and Google, with in-app purchase and
-          cash-out options.
+          Pepo demonstrates crypto UX can be gorgeous. Ost technology makes Pepo so fast and easy to use you’ll
+          re-imagine what’s possible for crypto apps.<br>
+          Pepo is the first crypto app approved by Apple and Google, with in-app purchase and cash-out options.
         </p>
         <p class="col-12 desc-p-three font-weight-600 font-italic font mb-0 order-1 order-md-2 px-0">
           "Pepo shows that blockchain is ready for primetime."
@@ -40,10 +40,10 @@
           -Decrypt
         </p>
         <p class="col-12 mb-0 font-weight-bold mt-4 d-none d-md-block order-md-4 px-0">
-          Behind the scenes
+          Under the hood
         </p>
         <p class="col-12 d-none d-md-block order-md-5 px-0">
-          Pepo is powered by Ost's industry-leading technology.
+          Ost technology powers Pepo. Learn more at
         </p>
           <div class="col-12 d-none d-md-inline order-md-6 px-0">
             <a href="<%=GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="text-link ">Developer Resources</a>
