--- a/app/views/web/ost/index/_developer_first.erb
+++ b/app/views/web/ost/index/_developer_first.erb
@@ -9,9 +9,8 @@
       <div class="col-12 col-md-4 mr-auto order-2 order-md-1 align-self-start mr-lg-auto mt-4 mt-md-3 px-4 px-lg-0">
         <h5 class="header-title">Developers First</h5>
         <p class="mt-3">
-          Ost Platform provides everything you need to test, integrate, and deploy your brand currency.
-          Our APIs, SDKs, dashboards enable fast and painless integration into any app -- so you can focus on
-          your business and leave the blockchain bits to us.
+          Seamlessly integrate our Server-side and Mobile Wallet SDKs into your application.
+          Our Wallet SDKs include user interface components and views to make integration fast and easy.
         </p>
         <div class="text-center text-md-left">
           <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk/getting-started/"
@@ -41,7 +40,7 @@
             <h6>Server-side SDKs</h6>
             <p>
               Server-side SDKs (in Java, Node.js, PHP, and Ruby) that allow you to retrieve token details, register users,
-              and distribute tokens to your end-users.
+              and distribute tokens to your users.
             </p>
           </div>
 
@@ -54,9 +53,8 @@
         <div class="border-box p-4 h-100 d-flex flex-column justify-content-between">
           <h6>Wallet SDKs</h6>
           <p>
-            Wallet SDKs (in Android, iOS, and React Native) that enable your end-users to hold tokens in non-custodial
-            wallets and to send and receive tokens to and from other users. User can also authorise multiple devices,
-            purchase tokens in-app and cash-out.
+            Wallet SDKs (in Android, iOS, and React Native) that enable your end-users to hold tokens in non-custodial wallets and
+            to send and receive tokens. Your users can also authorise multiple devices, purchase tokens in-app and cash-out.
           </p>
           <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url  %>platform/docs/sdk/getting-started/" class="text-link align-self-start">
             WALLET SDKs
