--- a/app/views/web/ost/index/_features_ost.erb
+++ b/app/views/web/ost/index/_features_ost.erb
@@ -10,10 +10,10 @@
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
                 </switch>
               </svg>
-              <h5 class="header-text d-inline-block ml-3 mb-0">Available</h5>
+              <h5 class="header-text d-inline-block ml-3 mb-0">Available Now</h5>
             </div>
             <p class="my-2 desc">
-              We're ready when you are. Launch your own Layer-2 Ethereum-based token in minutes and embed it into your app
+              Launch your own Layer-2 Ethereum-based token in minutes and embed it into your app. We're ready when you are.
             </p>
           </div>
         </div>
@@ -31,7 +31,7 @@
             <h5 class="header-text d-inline-block ml-3 mb-0">Developers First</h5>
           </div>
           <p class="my-2 desc">
-            Unified APIs and SDKs for simple integration into existing apps. No blockchain expertise required.
+            Easily integrate into existing apps with unified APIs and SDKs. No blockchain experience required.
           </p>
         </div>
       </div>
@@ -49,8 +49,8 @@
           <h5 class="header-text d-inline-block ml-3 mb-0">Regulatory Compliant</h5>
         </div>
         <p class="my-2 desc">
-          We put in the work so you don't have to. Apps built using Ost technology are automatically compliant
-          with no additional licenses needed, approved by Apple and Google. Users can buy tokens in-app and cash out
+          We put in the work so you don't have to. Apps built with Ost technology are automatically compliant.
+          No additional licenses needed. Approval from Apple and Google means users can buy tokens in-app and cash out.
         </p>
       </div>
     </div>
