--- a/app/views/web/ost/index/_ost_wallet_sdk_features.erb
+++ b/app/views/web/ost/index/_ost_wallet_sdk_features.erb
@@ -33,8 +33,9 @@
               <h6 class="header-text d-inline-block ml-3 mb-0">Self-custodial</h6>
             </div>
             <p class="my-2 desc">
-              End users own their private keys and have full control over their funds. In case a device is lost,
-              users can recover their wallet with 6-digit PIN.            </p>
+              Users own their private keys and have full control over their funds. If they lose a device, users can recover
+              their wallet with just a 6-digit PIN.
+            </p>
           </div>
         </div>
       </div>
@@ -48,7 +49,7 @@
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
                 </switch>
               </svg>
-              <h6 class="header-text d-inline-block ml-3 mb-0">Scalable, low cost transactions</h6>
+              <h6 class="header-text d-inline-block ml-3 mb-0">Scalable, low-cost transactions</h6>
             </div>
             <p class="my-2 desc">
               Run hundreds of transactions per second at near-zero cost on Layer-2 Ethereum blockchains.
@@ -66,11 +67,11 @@
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
                 </switch>
               </svg>
-              <h6 class="header-text d-inline-block ml-3 mb-0">Frictionless user experience</h6>
+              <h6 class="header-text d-inline-block ml-3 mb-0">Seamless user experience</h6>
             </div>
             <p class="my-2 desc">
-              There's no need for external wallets and confusing pop-ups. Ost Wallet makes it simple to onboard new and
-              existing users and to incorporate token transfers into your existing application.
+              There's no need for external wallets and confusing pop-ups. OST Wallet makes it simple to onboard new
+              and existing users and to integrate tokens into your existing application.
             </p>
           </div>
         </div>
