--- a/app/views/web/ost/index/_developer_first.erb
+++ b/app/views/web/ost/index/_developer_first.erb
@@ -37,14 +37,14 @@
       <div class="col-12 col-md-6 mb-3 mb-md-0">
         <div class="border-box p-4 h-100 d-flex flex-column justify-content-between">
           <div>
-            <h6>Server-side SDKs</h6>
+            <h6>Server SDKs</h6>
             <p>
               Server-side SDKs (in Java, Node.js, PHP, and Ruby) that allow you to retrieve token details, register users,
               and distribute tokens to your users.
             </p>
           </div>
 
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url  %>platform/docs/sdk/getting-started/" class="text-link align-self-start">
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url  %>platform/docs/sdk/server-side-sdks/php/" class="text-link align-self-start">
             SERVER-SIDE SDKs
           </a>
         </div>
@@ -56,7 +56,7 @@
             Wallet SDKs (in Android, iOS, and React Native) that enable your end-users to hold tokens in non-custodial wallets and
             to send and receive tokens. Your users can also authorise multiple devices, purchase tokens in-app and cash-out.
           </p>
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url  %>platform/docs/sdk/getting-started/" class="text-link align-self-start">
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url  %>platform/docs/sdk/mobile-wallet-sdks/android/" class="text-link align-self-start">
             WALLET SDKs
           </a>
         </div>
