post feedback changes

--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -1,6 +1,6 @@
 <section class="container-apps-built">
   <div class="container text-center my-6">
-    <h3>Apps Built with the Ost Wallet SDK</h3>
+    <h4 class="container-title">Apps Built with the Ost Wallet SDK</h4>
     <p class="mb-md-6 sub-heading">Live on Ethereum</p>
     <div class="d-block d-md-none mb-6 pb-6 pb-md-0 ">
       <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-logo.png" alt="Pepo Icon " class="img-fluid mb-3" width="168">
@@ -33,11 +33,11 @@
           re-imagine what’s possible for crypto apps.<br>
           Pepo is the first crypto app approved by Apple and Google, with in-app purchase and cash-out options.
         </p>
-        <p class="col-12 desc-p-three font-weight-600 font-italic font mb-0 order-1 order-md-2 px-0">
+        <a href="" class="col-12 desc-p-three font-weight-600 font-italic font mb-0 order-1 order-md-2 px-0">
           "Pepo shows that blockchain is ready for primetime."
-        </p>
+        </a>
         <p class="col-12 order-2 order-md-3 px-0">
-          -Decrypt
+          - Decrypt.com
         </p>
         <p class="col-12 mb-0 font-weight-bold mt-4 d-none d-md-block order-md-4 px-0">
           Under the hood
