--- a/app/views/web/ost/index/_features_ost.erb
+++ b/app/views/web/ost/index/_features_ost.erb
@@ -13,7 +13,7 @@
               <h5 class="header-text d-inline-block ml-3 mb-0">Available Now</h5>
             </div>
             <p class="my-2 desc">
-              Launch your own Layer-2 Ethereum-based token in minutes and embed it into your app. We're ready when you are.
+              Launch your own layer-2 Ethereum-based token in minutes and embed it into your app. We're ready when you are.
             </p>
           </div>
         </div>
