--- a/app/views/web/ost/index/_schedule_call.erb
+++ b/app/views/web/ost/index/_schedule_call.erb
@@ -1,6 +1,6 @@
 <section class="container-schedule-call position-relative">
   <div class="container py-6 text-center text-md-left">
-    <h4 class="header-text text-left">
+    <h4 class="header-text text-left container-title">
       Ready to Start Building?
     </h4>
     <p class="desc text-left">
