--- a/app/views/web/ost/index/_developer_first.erb
+++ b/app/views/web/ost/index/_developer_first.erb
@@ -7,9 +7,9 @@
   <div class="container">
     <div class="row align-items-center py-5">
       <div class="col-12 col-md-4 mr-auto order-2 order-md-1 align-self-start mr-lg-auto mt-4 mt-md-3 px-4 px-lg-0">
-        <h5 class="header-title">Developers First</h5>
+        <h4 class="header-title container-title">Developers First</h4>
         <p class="mt-3">
-          Seamlessly integrate our Server-side and Mobile Wallet SDKs into your application.
+          Seamlessly integrate our server-side and mobile wallet SDKs into your application.
           Our Wallet SDKs include user interface components and views to make integration fast and easy.
         </p>
         <div class="text-center text-md-left">
