--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -8,7 +8,7 @@
       <div class="row align-items-center mb-4">
 
         <div class="col-md-6">
-          <h3 class="header-blue-900"><%= ost_home_page_jumbotron[0]['jumbotron_title']%></h3>
+          <h3 class="header-blue-900 container-title"><%= ost_home_page_jumbotron[0]['jumbotron_title']%></h3>
           <p class="mt-3">
             <%= ost_home_page_jumbotron[0]['jumbotron_description']%>
           </p>
