--- a/app/views/web/ost/index/_ost_wallet_sdk_features.erb
+++ b/app/views/web/ost/index/_ost_wallet_sdk_features.erb
@@ -1,6 +1,6 @@
 <section class="container-ost-wallet-unique-features">
   <div class="container py-6">
-    <h4 class="text-center py-4">Unique features enabled by the Ost Wallet SDK</h4>
+    <h4 class="text-center py-4 container-title">Unique Features Enabled by the Ost Wallet SDK</h4>
     <div class="row">
 
       <div class="col-12 d-flex col-md-6 mb-4">
@@ -52,7 +52,7 @@
               <h5 class="header-text d-inline-block ml-3 mb-0">Scalable, low-cost transactions</h5>
             </div>
             <p class="my-2 desc">
-              Run hundreds of transactions per second at near-zero cost on Layer-2 Ethereum blockchains.
+              Run hundreds of transactions per second at near-zero cost on layer-2 Ethereum blockchains.
               All transactions finalized to Ethereum layer-1.
             </p>
           </div>
@@ -70,7 +70,7 @@
               <h5 class="header-text d-inline-block ml-3 mb-0">Seamless user experience</h5>
             </div>
             <p class="my-2 desc">
-              There's no need for external wallets and confusing pop-ups. OST Wallet makes it simple to onboard new
+              There's no need for external wallets and confusing pop-ups. Ost Wallet makes it simple to onboard new
               and existing users and to integrate tokens into your existing application.
             </p>
           </div>
