--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -14,6 +14,8 @@
       </a>
       <label for="tm" id="toggle-menu" class="mb-0 ml-auto ml-md-0 align-self-start navbar-toggler" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
         <span class="toggle-menu"></span>
+        <span class="toggle-menu"></span>
+        <span class="toggle-menu"></span>
       </label>
       <input type="checkbox" id="tm">
       <ul class="main-menu clearfix m-0 p-0 list-unstyled collapse" id="navbarToggler">
