removed under the hood

--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -33,21 +33,21 @@
           re-imagine what’s possible for crypto apps.<br>
           Pepo is the first crypto app approved by Apple and Google, with in-app purchase and cash-out options.
         </p>
-        <a href="" class="col-12 desc-p-three font-weight-600 font-italic font mb-0 order-1 order-md-2 px-0">
+        <a href="https://decrypt.co/10091/taking-ethereum-mainstream-social-media-app-pepo-goes-live-at-devcon-5" class="col-12 desc-p-three font-weight-600 font-italic font mb-0 order-1 order-md-2 px-0">
           "Pepo shows that blockchain is ready for primetime."
         </a>
         <p class="col-12 order-2 order-md-3 px-0 quote-by">
           - Decrypt.com
         </p>
-        <p class="col-12 mb-0 font-weight-bold d-none d-md-block order-md-4 px-0" style="margin-top: 45px">
-          Under the hood
-        </p>
-        <p class="col-12 d-none d-md-block order-md-5 px-0" style="margin-top: 5px">
-          Ost technology powers Pepo. Learn more at
-        </p>
-          <div class="col-12 d-none d-md-inline order-md-6 px-0" style="margin-top: 10px">
-            <a href="<%=GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="text-link ">Developer Resources</a>
-          </div>
+<!--        <p class="col-12 mb-0 font-weight-bold d-none d-md-block order-md-4 px-0" style="margin-top: 45px">-->
+<!--          Under the hood-->
+<!--        </p>-->
+<!--        <p class="col-12 d-none d-md-block order-md-5 px-0" style="margin-top: 5px">-->
+<!--          Ost technology powers Pepo. Learn more at-->
+<!--        </p>-->
+<!--          <div class="col-12 d-none d-md-inline order-md-6 px-0" style="margin-top: 10px">-->
+<!--            <a href="<%#=GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="text-link ">Developer Resources</a>-->
+<!--          </div>-->
 
         </div>
         <div class="app-links">
