--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -58,7 +58,7 @@
 
       </ul>
       <div class="d-none d-md-inline ml-auto">
-        <a href ="<%=calendly_link%>" target="_blank" rel="noopener noreferrer nofollow" class="btn btn-secondary"> Schedule a call</a>
+        <a href ="<%=calendly_link%>" target="_blank" rel="noopener noreferrer nofollow" class="btn btn-secondary" title="Schedule a call"> Schedule a call</a>
       </div>
 
 
