--- a/app/views/web/ost/index/_schedule_call.erb
+++ b/app/views/web/ost/index/_schedule_call.erb
@@ -6,7 +6,7 @@
     <p class="desc text-left">
       Schedule a call to understand how the Ost Wallet SDK can be integrated into your application.
     </p>
-    <a href="https://calendly.com/ostdotcom" class="btn btn-primary mt-5 mt-md-1">Schedule a Call</a>
+    <a href="https://calendly.com/ostdotcom" class="btn btn-primary mt-5 mt-md-1" rel="noopener noreferrer nofollow" target="_blank" title="Schedule a Call">Schedule a Call</a>
   </div>
   <div class="position-absolute w-100">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
