--- a/app/views/web/ost/index/_developer_first.erb
+++ b/app/views/web/ost/index/_developer_first.erb
@@ -17,7 +17,7 @@
              class="btn btn-primary"
              rel="noopener noreferrer nofollow"
              target="_blank"
-             title="DOCS & APIs">developer resources</a>
+             title="Developer Resources">developer resources</a>
         </div>
 
 
@@ -44,8 +44,8 @@
             </p>
           </div>
 
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url  %>platform/docs/sdk/server-side-sdks/php/" class="text-link align-self-start">
-            SERVER-SIDE SDKs
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url  %>platform/docs/sdk/server-side-sdks/php/" class="text-link align-self-start" title="SERVER-SIDE SDKs">
+            SERVER-SIDE SDK<span class="text-lowercase">s</span>
           </a>
         </div>
       </div>
@@ -56,8 +56,8 @@
             Wallet SDKs (in Android, iOS, and React Native) that enable your end-users to hold tokens in non-custodial wallets and
             to send and receive tokens. Your users can also authorise multiple devices, purchase tokens in-app and cash-out.
           </p>
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url  %>platform/docs/sdk/mobile-wallet-sdks/android/" class="text-link align-self-start">
-            WALLET SDKs
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url  %>platform/docs/sdk/mobile-wallet-sdks/android/" class="text-link align-self-start" title="WALLET SDKs">
+            WALLET SDK<span class="text-lowercase">s</span>
           </a>
         </div>
       </div>
