--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -29,10 +29,7 @@
 
         <li class="nav-item-wrapper">
           <div class="border-class">
-            <a href="<%=ost_watch_link %>" target="_blank" rel="noopener noreferrer nofollow" class="main-nav-item">
-              Live Transactions
-              <label class="navbar-toggler p-0 m-0" for="developers" data-toggle="collapse" data-target="#navbarToggler3" aria-controls="navbarToggler3" aria-expanded="false" aria-label="Toggle navigation"></label>
-            </a>
+            <a href="<%=ost_watch_link %>" target="_blank" rel="noopener noreferrer nofollow" class="main-nav-item" title="Live Transactions">Live Transactions</a>
           </div>
 
         </li>
@@ -40,10 +37,7 @@
 
         <li class="nav-item-wrapper">
           <div class="border-class">
-            <a href="https://medium.com/ostdotcom" target="_blank" rel="noopener noreferrer nofollow" class="main-nav-item">
-              Blog
-              <label  class="navbar-toggler p-0 m-0" for="company" data-toggle="collapse" data-target="#navbarToggler5" aria-controls="navbarToggler5" aria-expanded="false" aria-label="Toggle navigation"></label>
-            </a>
+            <a href="https://medium.com/ostdotcom" target="_blank" rel="noopener noreferrer nofollow" class="main-nav-item" title="Blog">Blog</a>
           </div>
 
         </li>
@@ -58,7 +52,7 @@
 
       </ul>
       <div class="d-none d-md-inline ml-auto">
-        <a href ="<%=calendly_link%>" target="_blank" rel="noopener noreferrer nofollow" class="btn btn-secondary" title="Schedule a call"> Schedule a call</a>
+        <a href ="<%=calendly_link%>" target="_blank" rel="noopener noreferrer nofollow" class="btn btn-secondary" title="Schedule A call"> Schedule a call</a>
       </div>
 
 
