--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -37,7 +37,7 @@
           "Pepo shows that blockchain is ready for primetime."
         </a>
         <p class="col-12 order-2 order-md-3 px-0 quote-by">
-          - Decrypt.com
+          - Decrypt.co
         </p>
 <!--        <p class="col-12 mb-0 font-weight-bold d-none d-md-block order-md-4 px-0" style="margin-top: 45px">-->
 <!--          Under the hood-->
