--- a/app/views/web/ost/index/_features_ost.erb
+++ b/app/views/web/ost/index/_features_ost.erb
@@ -49,8 +49,8 @@
           <h5 class="header-text d-inline-block ml-3 mb-0">Regulatory Compliant</h5>
         </div>
         <p class="my-2 desc">
-          We put in the work so you don't have to. Apps built with Ost technology are automatically compliant.
-          No additional licenses needed. Approval from Apple and Google means users can buy tokens in-app and cash out.
+          Apps built with Ost are compliant. Approval from Apple and Google means users can buy tokens in-app and cash out.
+          No additional licenses needed.
         </p>
       </div>
     </div>
