--- a/app/views/web/ost/index/_developer_first.erb
+++ b/app/views/web/ost/index/_developer_first.erb
@@ -1,6 +1,6 @@
 <div class="top-triangle">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
-    <polygon fill="#F4F8F9" points="0,100 100,0 100,100"></polygon>
+    <polygon fill="#35445b" points="0,100 100,0 100,100"></polygon>
   </svg>
 </div>
 <section class="container-developer-first">
@@ -37,8 +37,8 @@
       <div class="col-12 col-md-6 mb-3 mb-md-0">
         <div class="border-box p-4 h-100 d-flex flex-column justify-content-between">
           <div>
-            <h6>Server SDKs</h6>
-            <p>
+            <h6 class="border-box-title">Server SDKs</h6>
+            <p class="border-box-info">
               Server-side SDKs (in Java, Node.js, PHP, and Ruby) that allow you to retrieve token details, register users,
               and distribute tokens to your users.
             </p>
@@ -51,8 +51,8 @@
       </div>
       <div class="col-12 col-md-6">
         <div class="border-box p-4 h-100 d-flex flex-column justify-content-between">
-          <h6>Wallet SDKs</h6>
-          <p>
+          <h6 class="border-box-title">Wallet SDKs</h6>
+          <p class="border-box-info">
             Wallet SDKs (in Android, iOS, and React Native) that enable your end-users to hold tokens in non-custodial wallets and
             to send and receive tokens. Your users can also authorise multiple devices, purchase tokens in-app and cash-out.
           </p>
