--- a/app/views/web/ost/index/_developer_first.erb
+++ b/app/views/web/ost/index/_developer_first.erb
@@ -1,12 +1,12 @@
 <div class="top-triangle">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
-    <polygon fill="#35445b" points="0,100 100,0 100,100"></polygon>
+    <polygon fill="#27B9D2" points="0,100 100,0 100,100"></polygon>
   </svg>
 </div>
 <section class="container-developer-first">
   <div class="container">
     <div class="row align-items-center py-5">
-      <div class="col-12 col-md-4 mr-auto order-2 order-md-1 align-self-start mr-lg-auto mt-4 mt-md-3 px-4 px-lg-0">
+      <div class="col-12 col-md-4 mr-auto order-2 order-md-1 mr-lg-auto mt-4 mt-md-3 px-4 px-lg-0">
         <h4 class="header-title container-title">Developers First</h4>
         <p class="mt-3">
           Seamlessly integrate our server-side and mobile wallet SDKs into your application.
@@ -19,10 +19,6 @@
              target="_blank"
              title="Developer Resources">developer resources</a>
         </div>
-
-
-
-
       </div>
       <div class="col-12 col-md-8 order-1 text-right pr-0 order-md-2 pt-6 pt-lg-0">
         <img class="img-fluid responsively-lazy rotate-left ost-home-web-img"
@@ -33,11 +29,11 @@
           />
       </div>
     </div>
-    <div class="row pb-6">
+    <div class="row">
       <div class="col-12 col-md-6 mb-3 mb-md-0">
         <div class="border-box p-4 h-100 d-flex flex-column justify-content-between">
           <div>
-            <h6 class="border-box-title">Server SDKs</h6>
+            <h5 class="border-box-title">Server SDKs</h5>
             <p class="border-box-info">
               Server-side SDKs (in Java, Node.js, PHP, and Ruby) that allow you to retrieve token details, register users,
               and distribute tokens to your users.
@@ -51,7 +47,7 @@
       </div>
       <div class="col-12 col-md-6">
         <div class="border-box p-4 h-100 d-flex flex-column justify-content-between">
-          <h6 class="border-box-title">Wallet SDKs</h6>
+          <h5 class="border-box-title">Wallet SDKs</h5>
           <p class="border-box-info">
             Wallet SDKs (in Android, iOS, and React Native) that enable your end-users to hold tokens in non-custodial wallets and
             to send and receive tokens. Your users can also authorise multiple devices, purchase tokens in-app and cash-out.
