--- a/app/views/web/ost/index/_news_carousel.erb
+++ b/app/views/web/ost/index/_news_carousel.erb
@@ -57,8 +57,8 @@
       </div>
       <% end %>
 
-      <div class="d-flex justify-content-center row pb-4">
-        <a href="/events-news"  class="btn btn-primary my-2 my-md-3" title="See all news and events">See all news and events</a>
+      <div class="d-flex justify-content-center row my-5">
+        <a href="/events-news"  class="btn btn-primary" title="See all news and events">See all news and events</a>
       </div>
 
     </div>
