--- a/app/views/web/ost/index/_ost_wallet_sdk_features.erb
+++ b/app/views/web/ost/index/_ost_wallet_sdk_features.erb
@@ -1,6 +1,6 @@
 <section class="container-ost-wallet-unique-features">
-  <div class="container py-6">
-    <h4 class="text-center py-4 container-title">Unique Features Enabled by the Ost Wallet SDK</h4>
+  <div class="container py-5">
+    <h2 class="text-center pb-5 font-weight-bold">Unique Features Enabled by the <br/>Ost Wallet SDK</h2>
     <div class="row">
 
       <div class="col-12 d-flex col-md-6 mb-4">
