--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -326,8 +326,8 @@ h1, h2, h3, h4, h5, h6{
 
 //THis css handles fixed header overlap on ost-new section when direct link is open via ost.com/#ost-news
 #ost-events {
-  padding-top: 5rem;
-  margin-top: -5rem;
+  padding-top: 3rem;
+  //margin-top: -5rem;
 }
 
 .hp-section-bg-wrap {
