--- a/app/assets/stylesheets/web/ost/index/SidebySide.scss
+++ b/app/assets/stylesheets/web/ost/index/SidebySide.scss
@@ -68,7 +68,8 @@
     }
   }
 .sub-heading{
-  font-size: 25px;
+  font-size: 22px;
+  letter-spacing: 2px;
 }
   .videoWrapper{
     display: inline-block;
