--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -161,22 +161,30 @@ h1, h2, h3, h4, h5, h6{
       cursor: pointer;
       letter-spacing: 0.1rem;
       .play{
-        width: 15px;
-        height: 15px;
-        font-size: 0;
-        display: inline-block;
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        margin: auto;
+        box-shadow: 0 3px 3px 0 rgba(0,0,0,0.25);
+        -webkit-box-shadow: 0 3px 3px 0 rgba(0,0,0,0.25);
         svg{
-          width:100%;
-          height:100%;
-          fill: $blue-900;
-          margin-left:-9px;
-          margin-top: 1px;
+          width: 15px;
+          height: 20px;
+          top: 52%;
+          left: 55%;
+          transform: translate(-50%,-50%);
+          position: absolute;
         }
       }
 
       &:hover{
         .play{
-          .svg{
+          svg{
             fill: $white;
             transition: all 0.3s;
           }
