--- a/app/assets/stylesheets/web/ost_theme/variables.scss
+++ b/app/assets/stylesheets/web/ost_theme/variables.scss
@@ -85,6 +85,7 @@ $alice-blue: #f1f5f8!default; // customized
 // Theme blue shades
 $blue-100:  #D9E8EF !default;
 $blue-200:  #D2E3E5 !default;
+$blue-250:  #E3EEf2 !default;
 $blue-300:  #bfe6e8 !default;
 $blue-400:  #84d1d4 !default;
 $blue-500:  #8EB9CE !default;
