--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -1,6 +1,6 @@
 <section class="container-apps-built">
   <div class="container text-center my-6">
-    <h2>Apps Built with the Ost Wallet SDK</h2>
+    <h2 class="midnight-blue">Apps Built with the Ost Wallet SDK</h2>
     <p class="mb-md-6 pb-5 sub-heading font-weight-bold text-uppercase mt-4">&mdash;Live on Ethereum&mdash;</p>
     <div class="d-block d-md-none mb-6 pb-6 pb-md-0 ">
       <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-logo.png" alt="Pepo Icon " class="img-fluid mb-3" width="168">
