--- a/app/views/web/ost/index/_developer_first.erb
+++ b/app/views/web/ost/index/_developer_first.erb
@@ -1,14 +1,17 @@
 <div class="top-triangle">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
-    <polygon fill="#27B9D2" points="0,100 100,0 100,100"></polygon>
+    <polygon fill="#E3EEf2" points="0,100 100,0 100,100"></polygon>
   </svg>
 </div>
 <section class="container-developer-first">
   <div class="container">
+    <div class="position-absolute dots-texture d-none d-lg-block">
+      <img src="Dots.png" class="img-fluid">
+    </div>
     <div class="row align-items-center py-5">
       <div class="col-12 col-md-4 mr-auto order-2 order-md-1 mr-lg-auto mt-4 mt-md-3 px-4 px-lg-0">
-        <h3 class="header-title">Developers First</h3>
-        <p class="mt-3">
+        <h3 class="midnight-blue">Developers First</h3>
+        <p class="mt-3 midnight-blue">
           Seamlessly integrate our server-side and mobile wallet SDKs into your application.
           Our Wallet SDKs include user interface components and views to make integration fast and easy.
         </p>
