--- a/app/views/web/ost/index/_ost_wallet_sdk_features.erb
+++ b/app/views/web/ost/index/_ost_wallet_sdk_features.erb
@@ -1,6 +1,9 @@
-<section class="container-ost-wallet-unique-features">
+<section class="container-ost-wallet-unique-features position-relative">
+  <div class="position-absolute dots-texture d-none d-lg-block">
+    <img src="Dots.png" class="img-fluid">
+  </div>
   <div class="container py-5">
-    <h2 class="text-center pb-5 font-weight-bold">Unique Features Enabled by the <br/>Ost Wallet SDK</h2>
+    <h2 class="text-center pb-5 font-weight-bold midnight-blue">Unique Features Enabled by the <br/>Ost Wallet SDK</h2>
     <div class="row">
 
       <div class="col-12 d-flex col-md-6 mb-4">
@@ -77,11 +80,10 @@
         </div>
       </div>
     </div>
-
   </div>
 </section>
 <div>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
-    <polygon fill="#F9F8E6" points="0,0 0,100 100,0"></polygon>
+    <polygon fill="#e3eef2" points="0,0 0,100 100,0"></polygon>
   </svg>
 </div>
