--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -8,7 +8,7 @@
       <div class="row align-items-center mb-4">
 
         <div class="col-md-6">
-          <h3 class="header-blue-900 container-title"><%= ost_home_page_jumbotron[0]['jumbotron_title']%></h3>
+          <h2 class="midnight-blue"><%= ost_home_page_jumbotron[0]['jumbotron_title']%></h2>
           <p class="mt-3">
             <%= ost_home_page_jumbotron[0]['jumbotron_description']%>
           </p>
@@ -43,7 +43,7 @@
             <img
               class="img-fluid position-relative my-5 my-md-0" alt="Simple Token Play Video"
               src="<%= ost_home_page_jumbotron[0]['jumbotron_image'] %>"/>
-            <p class="mt-2">How To Design Crypto User Experiences For Humans</p>
+            <p class="mt-2">Watch - How To Design Crypto User Experiences For Humans</p>
           </div>
         </div>
 
