--- a/app/views/web/ost/index/_jumbotron_mobile.erb
+++ b/app/views/web/ost/index/_jumbotron_mobile.erb
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-12">
-        <h3 class="header-blue-900"><%= ost_home_page_jumbotron[0]['jumbotron_title']%></h3>
+        <h3 class="header-blue-900 midnight-blue"><%= ost_home_page_jumbotron[0]['jumbotron_title']%></h3>
         <p class="mt-3">
           <%= ost_home_page_jumbotron[0]['jumbotron_description']%>
         </p>
