--- a/app/views/web/ost/index/_developer_first.erb
+++ b/app/views/web/ost/index/_developer_first.erb
@@ -5,9 +5,9 @@
 </div>
 <section class="container-developer-first">
   <div class="container">
-    <div class="position-absolute dots-texture d-none d-lg-block">
-      <img src="Dots.png" class="img-fluid">
-    </div>
+<!--    <div class="position-absolute dots-texture d-none d-lg-block">-->
+<!--      <img src="Dots.png" class="img-fluid">-->
+<!--    </div>-->
     <div class="row align-items-center py-5">
       <div class="col-12 col-md-4 mr-auto order-2 order-md-1 mr-lg-auto mt-4 mt-md-3 px-4 px-lg-0">
         <h3 class="midnight-blue">Developers First</h3>
